# shardsctl

./: README.md  meson.build
shardsctl/: main.py  meson.build  shardsctl.in
shardsctl/functions/: meson.build  rebase.py  upgrade.py
shardsctl/utils/: command.py  files.py  flatpak.py  log.py  meson.build
src/: main.py  meson.build
